ionos_sbx/billing/revenue-engine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: revenue-engine-deployment
  namespace: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: revenue-engine
      app.kubernetes.io/name: revenue-engine
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: revenue-engine
        app.kubernetes.io/name: revenue-engine
    spec:
      containers:
        - name: revenue-engine-container
          image: production.eng.it:8433/dome/revenue-engine:1.6.1
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"      
            limits:
              memory: 512Mi
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
