ionos_sbx/billing/revenue-engine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: revenue-engine-ingress
  namespace: billing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sbx-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: payment.dome-marketplace-sbx.org
    http:
      paths:
      - path: /revenue/dashboard/
        pathType: Prefix
        backend:
          service:
            name: revenue-engine-svc
            port:
              number: 8080
  tls:
  - hosts:
    - payment.dome-marketplace-sbx.org
    secretName: revenue-engine-tls-secret
